syntax = "proto3";

package proto;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/arvians-id/gateway/pb";

service UserService {
  rpc FindAll (google.protobuf.Empty) returns (ListUserResponse) {}
  rpc FindByID (GetUserByIDRequest) returns (GetUserResponse) {}
  rpc Create (CreateUserRequest) returns (GetUserResponse) {}
  rpc Update (UpdateUserRequest) returns (GetUserResponse) {}
  rpc Delete (GetUserByIDRequest) returns (google.protobuf.Empty) {}
}

message User {
  int64 id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message ListUserResponse {
  repeated User users = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByIDRequest {
  int64 id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UpdateUserRequest {
  int64 id = 1;
  string name = 2;
}
